--- a/client/src/app/modules/dashboardModule/dashboard.html
+++ b/client/src/app/modules/dashboardModule/dashboard.html
@@ -28,7 +28,7 @@
             <input class="form-control" pInputText [(ngModel)]="search" (change)="this.filter()" placeholder="Search" type="text" (focus)="focus = true"
             (blur)="focus = false">
           </div> -->
-          <!-- <div class="table-responsive">
+          <div class="table-responsive">
 
             <p-table [value]="products" tableStyleClass="table align-items-center table-flush" [paginator]="true" [rows]="3">
               <ng-template pTemplate="header">
@@ -61,7 +61,7 @@
                   <td>
                     {{produs.stoc}}
                   </td>
-                  <td>
+                  <!-- <td>
                     <a class="btn btn-success pull-right button_margins fa fa-edit" [routerLink]="['/editprodus', produs.id]"></a>
                   </td>
                   <td>
@@ -72,12 +72,12 @@
                   </td>
                   <td>
                     <a class="btn btn-success pull-right button_margins fa fa-plus" (click)="toggleDisplay(); setReview(produs.id);">Recenzie</a>
-                  </td>
+                  </td> -->
                   
                 </tr>
               </ng-template>
           </p-table>
-          </div> -->
+          </div>
         </div>
       </div>
     </div>
